// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> with border to right matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline-offset: -0.1875rem;
}

.c1::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c1::before {
  left: unset;
  right: -1px;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 0.0625rem solid var(--color-line1);
  border-right: 0.0625rem solid var(--color-line1);
}

<ul
  className="c0"
>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with one custom item matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline-offset: -0.1875rem;
}

.c1::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: var(--color-background3);
}

.c2:focus {
  outline-offset: -0.1875rem;
}

.c2::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c2:hover,
.c2:focus {
  color: var(--color-primary1);
}

.c2:hover::before,
.c2:focus::before {
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 .itemNextToArrowIcon {
  margin-right: 1.25rem;
}

.c2 .headerMenuArrowIcon {
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c2 svg,
.c2 img {
  max-height: 1.5rem;
  width: auto;
}

.c2:focus,
.c2:hover {
  color: var(--color-font1);
}

.c2:focus .headerMenuArrowIcon,
.c2:hover .headerMenuArrowIcon {
  left: 0.3125rem;
}

.c2::before {
  display: none;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 0.0625rem solid var(--color-line1);
  border-right: 0.0625rem solid var(--color-line1);
}

<ul
  className="c0"
>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      className="c2"
      href="#"
    >
      <span
        className="itemNextToArrowIcon"
      >
        <a
          href="#custom-component"
        >
          Custom component
        </a>
      </span>
      <svg
        className="headerMenuArrowIcon"
        fill="var(--color-font1)"
        height="5.64"
        style={
          Object {
            "transform": "rotate(90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with one selected item matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline-offset: -0.1875rem;
}

.c1::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--color-primary1);
}

.c2:focus {
  outline-offset: -0.1875rem;
}

.c2::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c2:hover::before,
.c2:focus::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 0.0625rem solid var(--color-line1);
  border-right: 0.0625rem solid var(--color-line1);
}

<ul
  className="c0"
>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      aria-current="page"
      className="c2"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with three items matches with snapshot 1`] = `
.c1 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline-offset: -0.1875rem;
}

.c1::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c1:hover::before,
.c1:focus::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c2 {
  display: block;
  position: relative;
  padding: 1.125rem 1.875rem 1.0625rem;
  background-color: var(--color-background1);
  border-bottom: 0.0625rem solid var(--color-line1);
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: var(--color-font1);
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--color-font2);
}

.c2:focus {
  outline-offset: -0.1875rem;
}

.c2::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  left: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c2:hover::before,
.c2:focus::before {
  width: 0.25rem;
  background-color: var(--color-primary1);
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0 {
  margin: 0;
  padding: 0;
  list-style: none;
  border-left: 0.0625rem solid var(--color-line1);
  border-right: 0.0625rem solid var(--color-line1);
}

<ul
  className="c0"
>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c2"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="customLiClass"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="c1"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;
